# distributed-barbeque

./: CMakeLists.txt  Kconfig  tatus
.cmake/: FindBbqMonitors.cmake  FindBbqRTLib.cmake  FindSysfs.cmake
bbque/: CMakeLists.txt  application_manager.cc  application_proxy.cc  barbeque.cc  configuration_manager.cc  distributed_manager.cc  platform_manager.cc  platform_proxy.cc  platform_services.cc  power_monitor.cc  profile_manager.cc  realtime_manager.cc  resource_accounter.cc  resource_manager.cc  rpc_messages.cc  rpc_proxy.cc  scheduler_manager.cc  synchronization_manager.cc  test.cc
bbque/app/: application.cc  recipe.cc  schedulable.cc  working_mode.cc
bbque/pm/: power_manager_cpu.cc
bbque/pp/: android_platform_proxy.cc  linux.cc  linux_platform_proxy.cc  local_platform_proxy.cc  mango_platform_proxy.cc  p2012.cc  proc_listener.cc  remote_platform_proxy.cc
bbque/res/: binder.cc  bitset.cc  identifier.cc  resource_accounter.cc  resource_tree.cc  resources.cc  usage.cc
bbque/utils/: cgroups.cc  metrics_collector.cc  perf.cc
config/: bbque.conf.in  bbque.conf_dbg.in  bbqued.in  bosp_init.env.in  harpa_init.env.in  rtlib.conf.in
config/templates/cpp/include/: MyApp_exc.h
doxygen/: rtlib_sec03_plain.dox
include/bbque/: application_manager.h  application_manager_conf.h  application_manager_status.h  application_proxy.h  config.h.in  configuration_manager.h  distributed_manager.h  platform_manager.h  platform_proxy.h  process_manager.h  realtime_manager.h  resource_accounter.h  resource_accounter_status.h  resource_manager.h  rtlib.h  scheduler_manager.h  synchronization_manager.h  system.h  test.h
include/bbque/app/: application.h  application_status.h  recipe.h  schedulable.h  working_mode.h  working_mode_conf.h  working_mode_status.h
include/bbque/plugins/: agent_proxy_if.h  agent_proxy_types.h  rpc_channel.h  scheduler_policy.h  synchronization_policy.h
include/bbque/pm/: power_manager_cpu.h
include/bbque/pp/: android_platform_proxy.h  linux.h  linux_platform_proxy.h  linux_platform_proxy_types.h  mango_platform_proxy.h  p2012.h  remote_platform_proxy.h
include/bbque/res/: bitset.h  identifier.h  resource_accounter.h  resource_constraints.h  resources.h  usage.h
include/bbque/rtlib/: bbque_dmm.h  bbque_exc.h  bbque_rpc.h  bbque_rtexc.h  rpc_fifo_client.h  rpc_fifo_server.h  rpc_messages.h
include/bbque/utils/: cgroups.h  metrics_collector.h  perf.h  statistics.h  stats.h  utility.h
include/pmsl/: app_controller.h  exec_synchronizer.h
include/rtlib/: bbque_exc.h  bbque_ocl.h  bbque_rpc.h  rpc_fifo_client.h  rpc_fifo_server.h  rpc_messages.h  rpc_unmanaged_client.h  rtlib.h
include/rtlib/monitors/: generic_window.h  goal_info.h  memory_monitor.h  monitor.h  op_manager.h  run_time_manager.h  throughput_monitor.h  throughput_window.h  time_monitor.h  time_window.h
mpi/: CMakeLists.txt
mpi/include/: mpirun_exc.h
plugins/agent_proxy.old/grpc/proto/: agent_com.grpc.pb.cc  agent_com.grpc.pb.h  agent_com.pb.cc  agent_com.pb.h  agent_com.proto
plugins/agent_proxy/grpc/: agent_client.cc  agent_client.h  agent_impl.cc  agent_impl.h  agent_proxy.cc  agent_proxy.h
plugins/agent_proxy/grpc/proto/: README_claudio  agent_com.grpc.pb.cc  agent_com.grpc.pb.h  agent_com.pb.cc  agent_com.pb.h  agent_com.proto
plugins/logger/: log4cpp_logger.cc
plugins/rloader/: xml_rloader.cc  xml_rloader.h
plugins/rloader/rxml/: rxml_rloader.cc  rxml_rloader.h
plugins/rloader/xml/: xml_rloader.cc  xml_rloader.h
plugins/rpc/: CMakeLists.txt  Kconfig  fifo_rpc.cc
plugins/rpc/fifo/: CMakeLists.txt  Kconfig  fifo_rpc.cc  fifo_rpc.h
plugins/rpc/serial/: CMakeLists.txt  Kconfig  serial_plugin.cc  serial_plugin.h  serial_rpc.cc  serial_rpc.h
plugins/schedpol/: CMakeLists.txt  Kconfig  random_schedpol.cc
plugins/schedpol/cloves/: cloves_schedpol.cc
plugins/schedpol/contrex/: contrex_schedpol.cc
plugins/schedpol/emulsion/: CMakeLists.txt  Kconfig  emulsion_plugin.cc  emulsion_plugin.h  emulsion_schedpol.cc  emulsion_schedpol.h
plugins/schedpol/gridbalance/: gridbalance_schedpol.cc
plugins/schedpol/perdetemp/: perdetemp_schedpol.cc  perdetemp_schedpol.h
plugins/schedpol/random/: random_schedpol.cc
plugins/schedpol/tempura/: tempura_schedpol.cc
plugins/schedpol/test/: test_schedpol.cc
plugins/schedpol/yamca/: yamca_schedpol.cc  yamca_schedpol.h
plugins/schedpol/yams/: yams_schedpol.cc  yams_schedpol.h
plugins/schedpol/yams/contrib/: sc_congestion.cc  sc_fairness.cc  sc_fairness.h  sc_reconfig.cc  sched_contrib.cc  sched_contrib.h
plugins/syncpol/: sasb_syncpol.cc
plugins/syncpol/sasb/: sasb_syncpol.cc  sasb_syncpol.h
rtlib/: CMakeLists.txt  Kconfig  bbque_android.cc  bbque_dmm.cc  bbque_errors.cc  bbque_exc.cc  bbque_ocl.cc  bbque_rpc.cc  bbque_rtexc.cc  bbque_rtlib.cc  rpc_fifo_client.cc
rtlib/monitors/: CMakeLists.txt  memory_monitor.cc  op_manager.cc  run_time_manager.cc  throughput_monitor.cc  time_monitor.cc
test/: tests.h
tools/: CMakeLists.txt  bbqueConsole.sh  bbqueOpListBuilder.awk  bbqueSThormPowerLogParser.awk  bbqueSThormPowerPlotter.sh.in  inputTest_bbqueOpListBuilder.xml
tools/development/: bbquePluginDev.sh.in
tools/development/templates/: rpc_templates.tar.bz2
tools/plpxml/: plp_translator.cc  plp_translator.hpp  plpxml.cc
tools/workload_launcher/: workload_description.example  workload_launcher.sh.in
